Add Korean Galbi photo to it's recipe page

--- a/recipes/korean-galbi.html
+++ b/recipes/korean-galbi.html
@@ -1,1 +1,2 @@
 <h1>Korean Galbi</h1>
+<img src="../recipes/korean-galbi-image.jpg" alt="Finsihed look of Korean Gabli or Korean BBQ Short Ribs" width="500" height="500">
