Add descrpiton, ingredients, and steps
Added descrpiton of Korean Gabli in h2 header.
Added ingredients in an unordered list.
Added steps in an ordered list.

--- a/recipes/korean-galbi.html
+++ b/recipes/korean-galbi.html
@@ -1,2 +1,25 @@
 <h1>Korean Galbi</h1>
 <img src="../recipes/korean-galbi-image.jpg" alt="Finsihed look of Korean Gabli or Korean BBQ Short Ribs" width="500" height="500">
+<h2>Description</h2>
+<p>A traditional Korean BBQ Short Ribs recipe, known as Galbi. That features native ingredients and characteristics of sweetness and savoriness.</p>
+<h3>Ingredients</h3>
+<ul>
+    <li>Three-fourths of cup of soy sauce</li>
+    <li>Three-fourths of cup of water</li>
+    <li>Three tablespoons of white vinegar</li>
+    <li>Two tablespoons of sesame oil</li>
+    <li>One-half of a large onion, minced</li>
+    <li>One-fourth of a cup of minced garlic</li>
+    <li>One-fourth of a cup of brown sugar</li>
+    <li>Two tablespoons of white sugar</li>
+    <li>Three pounds of Korean-style short ribs (beef chuck flanken, cut one-third to one-half-inch-thick across bones)</li>
+</ul>
+<h4>Steps</h4>
+<ol>
+    <li>Gather all ingredients.</li>
+    <li>Pour soy sauce, water, vinegar, and sesame oil into a large, non-metallic bowl. Whisk in onion, garlic, brown sugar, white sugar, and pepper, whisking until sugars dissolve.</li>
+    <li>Submerge ribs in the marinade. Cover the bowl and refrigerate 7 to 12 hours;the longer, the better.</li>
+    <li>Preheat and outdoor grill for medium-high heat. Remove ribs from marinade and shake off excess; discard marinade.</li>
+    <li>Cook on the preheated grill unil the meat is no longer pink, 5 to 7 minutes per side.</li>
+    <li>Serve amd enjoy!</li>
+</ol>>
