Create Korean Fried Chicken page and its contents
Create Korean Fried Chicken page with a finish result picture, description, igredients, and steps.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="../odin-recipes/recipes/korean-galbi.html">Korean Galbi</a>
+    <a href="../odin-recipes/recipes/korean-fried-chicken.html">Korean Galbi</a>
 </body>
 </html>
