--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Odin Recipes</h1>
     <a href="../odin-recipes/recipes/korean-galbi.html">Korean Galbi</a>
     <a href="../odin-recipes/recipes/korean-fried-chicken.html">Korean Galbi</a>
+    <a href="../odin-recipes/recipes/bibimbap.html">Bibimbap</a>
 </body>
 </html>
