--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="../odin-recipes/recipes/korean-galbi.html">Korean Galbi</a>
-    <a href="../odin-recipes/recipes/korean-fried-chicken.html">Korean Galbi</a>
-    <a href="../odin-recipes/recipes/bibimbap.html">Bibimbap</a>
+    <ul>
+        <li><a href="../odin-recipes/recipes/korean-galbi.html">Korean Galbi</a></li>
+        <li><a href="../odin-recipes/recipes/korean-fried-chicken.html">Korean Galbi</a></li>
+        <li><a href="../odin-recipes/recipes/bibimbap.html">Bibimbap</a></li>
+    </ul>
+    
 </body>
 </html>
